--- a/code_software_quality_analysis.rmd
+++ b/code_software_quality_analysis.rmd
@@ -38,7 +38,7 @@ knitr::opts_chunk$set(echo = TRUE, dev = "pdf", cache = TRUE)
 
 ```{r, warning=FALSE, message=FALSE}
 
-#   PRELIMINARY FUNCTIONS ######################################################
+#   PRELIMINARY FUNCTIONS #####################################################
 
 sensobol::load_packages(c("data.table", "tidyverse", "openxlsx", "scales", 
                           "cowplot", "readxl", "ggrepel", "tidytext"))
@@ -183,6 +183,32 @@ p1
 
 ## Maintainability index
 
+```{r maintainability_index_interpretation, dependson="dataset"}
+
+# CALCULATE INTERPRETATIBILITY OF MAINTAINABILITY INDEX 3#######################
+
+# Define vector of interpretation ----------------------------------------------
+
+vec_interpretation <- c("low", "moderate", "high")
+
+# Calculate --------------------------------------------------------------------
+
+dt$maintainability_index %>%
+  melt(., measure.vars = c("M_loc", "M_average")) %>%
+  .[, interpretativity:= ifelse(value > 85, vec_interpretation[3], 
+                                ifelse(value <=85 & value >= 65, vec_interpretation[2], 
+                                       vec_interpretation[1]))] %>%
+  .[, .N, .(language, interpretativity, variable)] %>%
+  dcast(., variable + language ~ interpretativity, value.var = "N") %>%
+  .[, total:= rowSums(.SD, na.rm = TRUE), .SDcols = vec_interpretation] %>%
+  .[, paste(vec_interpretation, "prop", sep = "_"):= lapply(.SD, function(x) 
+    x / total), .SDcols = vec_interpretation] %>%
+  print()
+```
+
+
+By combining the classic and extended versions of the maintainability index, our analysis reveals differences between Fortran and Python implementations. Using the weighted measure ($M_\text{LOC}$), 70% of Fortran code falls into the “low” maintainability category, compared with only 15% when using the unweighted average ($M_\text{average}$). This discrepancy indicates that a few complex, poorly maintainable routines dominate the overall profile of the Fortran codebase. In contrast, Python routines present a more favorable profile: 27% achieve high maintainability under $M_\text{LOC}$, and all are classified as “highly maintainable” under $M_\text{average}$.
+
 ```{r maintainability_index, dependson="dataset", fig.height=2.5, fig.width=4}
 
 # PLOT MAINTAINABILITY INDEX ###################################################
@@ -209,6 +235,7 @@ plot_maintainability_index <- dt$maintainability_index %>%
 
 plot_maintainability_index
 ```
+
 
 ## Score
 
@@ -239,4 +266,170 @@ plot_score
 bottom <- plot_grid(plot_maintainability_index, plot_score, ncol = 2, labels = c("d", "e"))
 
 plot_grid(p1, bottom, ncol = 1, rel_heights = c(0.62, 0.38))
+```
+
+## Metrics at the function level
+
+```{r read_metrics_function_data}
+
+# METRICS AT THE FILE AND FUNCTION LEVEL #######################################
+
+folder <- "./datasets/results_function"
+
+# Get names of files -----------------------------------------------------------
+
+csv_files <- list.files(path = folder, pattern = "\\.csv$", full.names = TRUE)
+
+# Split into file_metrics and func_metrics -------------------------------------
+
+file_metric_files <- grep("file_metrics", csv_files, value = TRUE)
+func_metric_files <- grep("func_metrics", csv_files, value = TRUE)
+
+# Build one named list ---------------------------------------------------------
+
+list_metrics <- list(file_metrics = setNames(lapply(file_metric_files, fread), 
+                                             basename(file_metric_files)),
+                     func_metrics = setNames(lapply(func_metric_files, fread), 
+                                             basename(func_metric_files)))
+
+# Create function to combine files ---------------------------------------------
+
+make_combined <- function(subset_list, pattern) {
+  rbindlist(subset_list[grep(pattern, names(subset_list))], idcol = "source_file")
+}
+
+# Combine files ----------------------------------------------------------------
+
+metrics_combined <- list(file_fortran = make_combined(list_metrics$file_metrics,  "fortran"),
+                         file_python = make_combined(list_metrics$file_metrics,  "python"),
+                         func_fortran = make_combined(list_metrics$func_metrics, "fortran"),
+                         func_python = make_combined(list_metrics$func_metrics, "python"))
+
+# Functions to extract name of model and language from file --------------------
+
+extract_model <- function(x) 
+  sub("^(file|func)_metrics_\\d+_([A-Za-z0-9-]+)_(fortran|python).*", "\\2", x)
+
+extract_lang  <- function(x) 
+  sub("^(file|func)_metrics_\\d+_([A-Za-z0-9-]+)_(fortran|python).*", "\\3", x)
+
+# Extract name of model and language -------------------------------------------
+
+metrics_combined <- lapply(metrics_combined, function(dt) {
+  dt[, source_file:= sub("\\.csv$", "", basename(source_file))]
+  dt[, model:= extract_model(source_file)]
+  dt[, language:= extract_lang(source_file)]
+  dt
+})
+
+# Add column of complexity category --------------------------------------------
+
+metrics_combined <- lapply(names(metrics_combined), function(nm) {
+  dt <- as.data.table(metrics_combined[[nm]])
+  if (grepl("^func_", nm) && "cyclomatic_complexity" %in% names(dt)) {
+    dt[, complexity_category := cut(
+      cyclomatic_complexity,
+      breaks = c(-Inf, 10, 20, 50, Inf),
+      labels = c("b1","b2","b3","b4")
+    )]
+  }
+  dt
+}) |> setNames(names(metrics_combined))
+
+# Define labels ----------------------------------------------------------------
+
+lab_expr <- c(
+  b1 = expression(C %in% "(" * 0 * ", 10" * "]"),
+  b2 = expression(C %in% "(" * 10 * ", 20" * "]"),
+  b3 = expression(C %in% "(" * 20 * ", 50" * "]"),
+  b4 = expression(C %in% "(" * 50 * ", " * infinity * ")")
+)
+
+# EXPORT DATA TO .CSV ##########################################################
+
+# set output folder inside "datasets" ------------------------------------------
+
+outdir <- file.path("datasets", "merged_results")
+
+# write each slot to its own CSV -----------------------------------------------
+
+lapply(names(metrics_combined), function(nm) {
+  out_file <- file.path(outdir, paste0(nm, ".csv"))
+  fwrite(metrics_combined[[nm]], out_file)
+})
+```
+
+```{r plot_cyclomatic_model, dependson="read_metrics_function_data", fig.height=5.5, fig.width=6}
+
+# PLOT #########################################################################
+
+# Cyclomatic complexity at the model level -------------------------------------
+
+metrics_combined[grep("^func_", names(metrics_combined))] %>%
+  lapply(., function(x) x[, .(cyclomatic_complexity, model, language)]) %>%
+  rbindlist() %>%
+  ggplot(., aes(cyclomatic_complexity)) +
+  geom_histogram() +
+  annotate("rect",
+           xmin = 11, xmax = 20,
+           ymin = -Inf, ymax = Inf,
+           fill = "orange", alpha = 0.2) +
+  annotate("rect",
+           xmin = 21, xmax = 50,
+           ymin = -Inf, ymax = Inf,
+           fill = "red", alpha = 0.2) +
+  annotate("rect",
+           xmin = 51, xmax = Inf,
+           ymin = -Inf, ymax = Inf,
+           fill = "purple", alpha = 0.2) +
+  facet_wrap(model ~ language, scales = "free") +
+  scale_x_continuous(breaks = breaks_pretty(n = 3)) +
+  scale_y_continuous(breaks = breaks_pretty(n = 2)) +
+  labs(x = "Cyclomatic complexity", y = "Nº") +
+  theme_AP()
+```
+
+```{r plot_scatter_and_bar, dependson="read_metrics_function_data", fig.height=2.5, fig.width=3}
+
+# Scatterplot cyclomatic vs lines of code --------------------------------------
+
+plot_c_vs_loc <- metrics_combined[grep("^func_", names(metrics_combined))] %>%
+  lapply(., function(x) x[, .(loc, cyclomatic_complexity, language)]) %>%
+  rbindlist() %>%
+  ggplot(., aes(loc, cyclomatic_complexity, color = language)) +
+  geom_point(alpha = 0.5, size = 0.7) +
+  scale_x_continuous(breaks = breaks_pretty(n = 3)) +
+  labs(x = "Lines of code", y = "C") +
+  scale_color_manual(values = color_languages) +
+  theme_AP() + 
+  theme(legend.position = "none")
+
+plot_c_vs_loc
+
+# Count & proportion -----------------------------------------------------------
+
+plot_bar_cyclomatic <- metrics_combined[grep("^func_", names(metrics_combined))] %>%
+  lapply(., function(x) x[, .(complexity_category, language)]) %>%
+  rbindlist() %>%
+  .[, .N, .(complexity_category, language)] %>%
+  .[, proportion := N / sum(N), language] %>%
+  ggplot(., aes(complexity_category, proportion, fill = language)) +
+  geom_bar(stat = "identity", position = position_dodge(0.6)) +
+  scale_fill_manual(values = color_languages) +
+  scale_y_continuous(breaks = scales::breaks_pretty(n = 4)) +
+  scale_x_discrete(labels = lab_expr) +
+  labs(x = "", y = "Proportion") +
+  coord_flip() +
+  theme_AP() +
+  theme(legend.position = "none")
+
+plot_bar_cyclomatic
+```
+
+```{r merge_scatter, dependson="plot_scatter_and_bar", fig.height=1.8, fig.width=4}
+
+# MERGE #########################################################################
+
+plot_grid(plot_c_vs_loc, plot_bar_cyclomatic, ncol = 2, labels = "auto", 
+          rel_widths = c(0.45, 0.55))
 ```
